@@ -1,3 +1,8 @@
+2004-12-22  Ben Elliston  <bje@au.ibm.com>
+
+	PR optimization/8328
+	* gcc.dg/pr8328.c: New test.
+
 2004-12-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20041222-1.c: New test.
