@@ -1,3 +1,15 @@
+2004-07-25  David Edelsohn  <edelsohn@gnu.org>
+
+	PR target/16239
+	* config/rs6000/rs6000.md (movdi_internal64): Further disparage
+	f->f.
+
+2002-11-06  David Edelsohn  <edelsohn@gnu.org>
+
+	PR target/8480, optimization/8328
+	* config/rs6000/rs6000.md (movdi_internal64): Discourage
+	FPR to FPR moves.
+
 2004-02-26  Alan Modra  <amodra@bigpond.net.au>
 
 	PR rtl-optimization/14279
